--- a/_config.yml
+++ b/_config.yml
@@ -49,12 +49,15 @@ Strong skills in **problem-solving, optimization, presentation, communication, a
 
 <div align="center">
 
-## 📬 Connect with Me
+<h2>📬 Connect with Me</h2>
 
-[![Email](https://img.shields.io/badge/Email-Contact-informational)](mailto:maddelapriyadarshini@gmail.com)  
-[![LinkedIn](https://img.shields.io/badge/LinkedIn-Profile-blue)](https://www.linkedin.com/in/yourprofile)  
-[![GitHub](https://img.shields.io/badge/GitHub-Portfolio-black)](https://github.com/priyadarshnimaddela)
+<a href="mailto:maddelapriyadarshini@gmail.com"><img src="/assets/images/outlook.jpg" width="50" alt="Email" style="margin: 5px;"></a>
+<a href="https://www.linkedin.com/in/pmaddela/"><img src="/assets/images/linkedin.jpg" width="50" alt="LinkedIn" style="margin: 5px;"></a>
+<a href="https://github.com/PriyadarshiniMaddela"><img src="/assets/images/github.jpg" width="50" alt="GitHub" style="margin: 5px;"></a>
+<a href="#"><img src="/assets/images/wtsapp.jpg" width="50" alt="WhatsApp" style="margin: 5px;"></a>
 
-Contact me at **PMaddela@clarku.edu**
+<p><strong>Contact me at PMaddela@clarku.edu</strong></p>
 
 </div>
+
+
